autarkie_test/tests/ui/fail/union_type.stderr
error: Grammar derive does not support unions
 --> tests/ui/fail/union_type.rs:4:5
  |
4 | pub union BadUnion {
  |     ^^^^^

error[E0277]: the trait bound `BadUnion: std::marker::Copy` is not satisfied
 --> tests/ui/fail/union_type.rs:3:10
  |
3 | #[derive(Clone, Grammar)]
  |          ^^^^^ the trait `std::marker::Copy` is not implemented for `BadUnion`
  |
note: required by a bound in `AssertParamIsCopy`
 --> $RUST/core/src/clone.rs
  |
  | pub struct AssertParamIsCopy<T: Copy + PointeeSized> {
  |                                 ^^^^ required by this bound in `AssertParamIsCopy`
help: consider annotating `BadUnion` with `#[derive(Copy)]`
  |
4 + #[derive(Copy)]
5 | pub union BadUnion {
  |
